--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <artifactId>gremlin-maven-plugin</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
-  
+
 
   <name>gremlin-maven-plugin</name>
 
@@ -15,13 +15,15 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.apache.tinkerpop</groupId>
       <artifactId>gremlin-console</artifactId>
-      <version>3.2.5</version>
+      <version>3.3.4</version>
     </dependency>
 
     <dependency>
@@ -37,7 +39,7 @@
       <version>3.4</version>
       <scope>provided</scope>
     </dependency>
-    
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
